--- a/style.css
+++ b/style.css
@@ -59,7 +59,9 @@ label.filed input {
     border-color: var(--focus_color);
 }
 
-label.error input {
+label.error input,
+label.fail input,
+label.bad input {
     border-color: var(--error_color);
 }
 
@@ -72,9 +74,13 @@ label.filed span {
     color: var(--focus_color);
 }
 
-label.error span {
+label.error span,
+label.fail span,
+label.bad span {
     color: var(--error_color);
 }
+
+
 
 span {
     cursor: text;
@@ -110,5 +116,27 @@ span {
 }
 
 .input-error.view {
+    display: block;
+}
+
+.input-fail {
+    color: var(--error_color);
+    font-size: 14px;
+    margin-top: 4px;
+    display: none;
+}
+
+.input-fail.kind {
+    display: block;
+}
+
+.input-error-fail {
+    color: var(--error_color);
+    font-size: 14px;
+    margin-top: 4px;
+    display: none;
+}
+
+.input-error-fail.sort {
     display: block;
 }
